--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ clap = { version = "4.5.39", features = ["derive"] }
 anyhow = "1.0.98"
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.22"
+arboard = "3.2.0"
 
 [dev-dependencies]
 tempfile = "3.20.0"
