--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ arboard = "3.2.0"
 dialoguer = "0.11.0"
 tempfile = "3.20.0"
 is-terminal = "0.4"
+rmcp = { version = "0.2.0", features = ["server"] }
+tokio = { version = "1", features = ["full"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 tempfile = "3.20.0"
