--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ is-terminal = "0.4"
 rmcp = { version = "0.2.0", features = ["server"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
+regex = "1.0"
 
 [dev-dependencies]
 tempfile = "3.20.0"
